--- a/tombio/dependencies/onsenui-2.10.3/css/onsenui - original.css
+++ b/tombio/dependencies/onsenui-2.10.3/css/onsenui - original.css
@@ -274,12 +274,12 @@ ons-carousel[fullscreen] {
   width: 100%;
 }
 
-/*.ons-ios-scroll-fix .page:not(.page--wrapper)[shown] > .page__content {
+.ons-ios-scroll-fix .page:not(.page--wrapper)[shown] > .page__content {
   overflow-y: hidden;
-}*/
-/*.ons-ios-scroll-fix ons-splitter-side > .page:not(.page--wrapper)[shown] > .page__content {
+}
+.ons-ios-scroll-fix ons-splitter-side > .page:not(.page--wrapper)[shown] > .page__content {
   overflow-y: auto;
-}*/
+}
 
 ons-row {
   display: -webkit-box;
